--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #9c9c9c;
     --foreground: #ededed;
   }
 }
@@ -24,4 +24,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-} */
+}  */
